syntax = "proto3";

option csharp_namespace = "PreProcessingService.Protos";

package preprocessing;

// Mensagem para enviar dados para pré-processamento
message PreProcessRequest {
  string wavy_id = 1;
  string raw_data = 2; // Dados agregados (texto, CSV, XML, JSON, etc)
}

// Mensagem de resposta com dados uniformizados
message PreProcessResponse {
  string processed_data = 1; // Dados prontos para envio ao servidor TCP
}

// Serviço de pré-processamento
service PreProcessing {
  rpc PreProcess (PreProcessRequest) returns (PreProcessResponse);
}
